# default-settings

./: .gitignore  .inputrc  .travis.yml  CMakeLists.txt  README.md  appcenter.blacklist  brightness.conf  gconf-defaults.orig  lightdm.conf  meson.build  meson_options.txt  policykit.desktop  settings.ini
.github/: issue_template.md
.github/workflows/: main.yaml  release.yml
accountsservice/: io.elementary.greeter.AccountsService.policy  io.elementary.pantheon.AccountsService.policy  io.elementary.pantheon.AccountsService.xml  meson.build
apparmor/: meson.build
apparmor.d/: io.elementary.lightdm-guest-session
appcenter/: appcenter.blacklist
cups/: sudoku-testprint
debian/: changelog  control  copyright  dirs  elementary-default-settings.gsettings-override  elementary-default-settings.links  elementary-default-settings.lintian-overrides  elementary-default-settings.maintscript  elementary-dpms-helper.1  elementary-dpms-helper.install  elementary-dpms-helper.manpages  elementary-live-settings.install  elementary-plymouth-theme.install  elementary-printer-test-page.install  elementary-printer-test-page.postrm  elementary-printer-test-page.preinst  gconf-defaults  gconf-defaults.commented  install  links  plymouth-theme-elementary.install  plymouth-theme-elementary.postinst  plymouth-theme-elementary.prerm  postinst  postrm  preinst  prerm  rules  ubiquity-slideshow-elementary.install
dpms/: CMakeLists.txt  elementary-dpms-helper  elementary-dpms-helper.desktop  org.pantheon.dpms.gschema.xml
elementary-logo/: elementary.plymouth
flatpak/: freedesktop.filter
flatpak/repo/: appcenter.trustedkeys.gpg
geoclue/: beacondb.conf  geoclue.conf  meson.build
gtk/: gtk4-settings.ini  meson.build  settings.ini
launchers/: beatbox.dockitem  dexter.dockitem  empathy.dockitem  gnumeric.dockitem  lingo.dockitem  noise.dockitem
meson/: create-symlink.py  post_install.py
midori/: config
network/: meson.build
overrides/: default-settings.gschema.override  default-settings.gschema.override.in  meson.build  plank-dockitems.gschema.override
plank/dock1/: settings
plank/dock1/launchers/: abiword.dockitem  appcenter.dockitem  audience.dockitem  dexter.dockitem  empathy.dockitem  epiphany.dockitem  geary.dockitem  io.elementary.music.dockitem  io.elementary.noise.desktop  io.elementary.videos.dockitem  io.elementray.music.dockitem  maya-calendar.dockitem  maya.dockitem  midori.dockitem  noise.dockitem  org.pantheon.appcenter.dockitem  org.pantheon.audience.dockitem  org.pantheon.maya.dockitem  org.pantheon.noise.desktop  org.pantheon.photos.dockitem  org.pantheon.switchboard.dockitem  pantheon-files.dockitem  pantheon-mail.dockitem  pantheon-photos.dockitem  postler.dockitem  shotwell.dockitem  softwarecenter.dockitem  switchboard.dockitem  totem.dockitem
plymouth/: meson.build  plymouth-hidpi.service  plymouth-hidpi.service.in  plymouth-hidpi.sh  ubuntu-text.plymouth
plymouth/elementary-logo/: elementary.script
polkit/: com.ubuntu.enable-hibernate.pkla
profile.d/: pantheon-filechooser-module.sh  qt-qpa-platformtheme.sh  qt-style-override.sh  screenshot-webcam-folders.sh  term.sh  xlib-skip-argb-visuals.sh
sessioninstaller/: sessioninstaller.desktop
skel/: .inputrc  meson.build
skel/flatpak/overrides/: global
skel/flatpak/repo/: config  flathub.trustedkeys.gpg
skel/flatpak/repo/tmp/cache/summaries/: appcenter-x86_64-f1e5a3a9e0f7173dcb75ac1b0bc066f94fb962e84bcca0d6028ecdf0cc8520ff.sub  appcenter.idx  appcenter.idx.sig
skel/plank/dock1/launchers/: io.elementary.appcenter.dockitem  io.elementary.calendar.dockitem  io.elementary.files.dockitem  io.elementary.mail.dockitem  io.elementary.music.dockitem  io.elementary.photos.dockitem  io.elementary.settings.dockitem  io.elementary.switchboard.dockitem  io.elementary.tasks.dockitem  io.elementary.videos.dockitem  org.gnome.Epiphany.dockitem  org.pantheon.mail.dockitem
touchegg/: touchegg.conf
ubiquity-slideshow-elementary/: slideshow.conf
ubiquity-slideshow-elementary/slides/: index.html
wingpanel.d/: ayatana.blacklist
xdg-desktop-portal/: pantheon-portals.conf
