option('appcenter-flatpak',
       type: 'boolean',
       value: true,
       description: 'Install configuration files for the AppCenter flatpak remote')

option('default-wallpaper',
       type: 'string',
       value: '/usr/share/backgrounds/elementaryos-default',
       description: 'Path to default wallpaper to use in Pantheon.')

option('default-wallpaper-dark',
       type: 'string',
       value: '',
       description: 'Path to dark wallpaper to use in Pantheon.')

option('plank-dockitems',
       type: 'boolean',
       value: true,
       description: 'Install default Pantheon Plank dockitems')

option('default-gsettings-overrides',
       type: 'boolean',
       value: true,
       description: 'Install default Pantheon GSettings Overrides')
